best-practices-vpol/require-ro-rootfs/.kyverno-test-scope/resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-rootfs, namespace: default}
spec:
  containers: [{name: app, image: ghost}]
---
apiVersion: v1
kind: Pod
metadata: {name: exception-rootfs, namespace: team-b}
spec:
  containers: [{name: app, image: ghost}]
